<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".TentangActivity"
    android:weightSum="4"
    android:background="@color/yellow_2"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="2.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:elevation="36dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/TitleHome"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="20dp"
            android:text="@string/TitleDsc"
            android:textColor="@color/black"
            android:textSize="12sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/NameDosen"
            android:textColor="@color/black"
            android:textSize="12sp"/>


    </LinearLayout>

</LinearLayout>