<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="4"
    android:background="@color/teal_700"
    android:layout_gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/familly">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:elevation="36dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/titan_one"
            android:text="@string/TitleHome"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/mulaiBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/MulaiBtn"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="147dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="35dp"
                        android:text="@string/DscDiag"
                        android:textColor="@color/white"
                        android:textSize="10sp" />

                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/MulaiBtn"
                        android:src="@drawable/ic_diagnosa" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tentangBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TentangBtn"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"/>

                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/TentangBtn"
                        android:src="@drawable/info"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>